devops/cloudformation/vpc-liriotech-cf-dev.yml
AWSTemplateFormatVersion: 2010-09-09
Description: >
  Lirio Tech VPC Full... 
  
Resources:
  VPCLirioTech:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: VPCLirioTech

  SGLirioTech:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: SGLirioTech
      GroupDescription: Security Group Game ON
      VpcId: !Ref VPCLirioTech
      SecurityGroupIngress:
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: 22
          ToPort: 22
      #SecurityGroupEgress:
       # - !Ref MeuOutboundSecurityGroupEgressDemo
      Tags:
        - Key: Name
          Value: SGLirioTechTag

  SGIngressLirioTech:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref SGLirioTech
      IpProtocol: "tcp"
      CidrIp: 0.0.0.0/0
      FromPort: 0
      ToPort: 65535

  SGEgressLirioTech:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref SGLirioTech
      IpProtocol: tcp
      CidrIp: 0.0.0.0/0
      FromPort: 0
      ToPort: 65535

  SubnetPublicLirioTech:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1a
      MapPublicIpOnLaunch: true
      CidrBlock: 10.0.1.0/24
      VpcId: !Ref VPCLirioTech 
      Tags:
        - Key: Name
          Value: SubnetPublicLirioTechTag

  # NetworkInterfacePublic:
  #   Type: AWS::EC2::NetworkInterface
  #   Properties: 
  #     Description: NetworkInterfacePublic
  #     #AssociatePublicIpAddress: true
  #     #DeleteOnTermination: true
  #     #DeviceIndex: 0
  #     GroupSet: 
  #       - !Ref SGLirioTech
  #     SubnetId: !Ref SubnetPublicLirioTech
  #     #Tags: 
  #     #  - NetworkInterfacePublicTag                 

  SubnetPublicLirioTech2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1d
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPCLirioTech
      Tags:
        - Key: Name
          Value: SubnetPublicLirioTechTag2          

  SubnetPrivateLirioTech:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/24
      VpcId: !Ref VPCLirioTech
      Tags:
        - Key: Name
          Value: SubNetPrivateLirioTechTag
  
  RouteTablePublicLirioTech:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPCLirioTech
      Tags:
        - Key: Name
          Value: RouteTablePublicLirioTech

  RouteTablePublicLirioTech2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPCLirioTech
      Tags:
        - Key: Name
          Value: RouteTablePublicLirioTech2

  RouteTablePrivateLirioTech:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPCLirioTech
      Tags:
        - Key: Name
          Value: RouteTablePrivateLirioTech


  SubnetRouteTableAssociationPublicLirioTech:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTablePublicLirioTech
      SubnetId: !Ref SubnetPublicLirioTech
      #Key: Name
      #Value: MinhaSubnetRouteTableAssociationPublicaDemo

  SubnetRouteTableAssociationPublicLirioTech2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTablePublicLirioTech2
      SubnetId: !Ref SubnetPublicLirioTech2
      #Key: Name
      #Value: MinhaSubnetRouteTableAssociationPublicaDemo      
  
  SubnetRouteTableAssociationPrivateLirioTech:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTablePrivateLirioTech
      SubnetId: !Ref SubnetPrivateLirioTech
      #Key: Name
      #Value: MinhaSubnetRouteTableAssociationPrivadaDemo

  RoutePublicInternetGatewayLirioTech:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGatewayLirioTech
      RouteTableId: !Ref RouteTablePublicLirioTech

  RoutePublicInternetGatewayLirioTech2:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGatewayLirioTech
      RouteTableId: !Ref RouteTablePublicLirioTech2      
      
      #Key: Name
      #Value: MinhaRotaPublicaInternetGatewayDemo

  #RoutePrivateNatGatewayLirioTech:
  #  Type: "AWS::EC2::Route"
  #  Properties:
  #    DestinationCidrBlock: 0.0.0.0/0
  #    NatGatewayId: !Ref NatGatewayLirioTech
  #    RouteTableId: !Ref RouteTablePrivateLirioTech
      #Key: Name
      #Value: MinhaRotaPrivadaNatGatewayDemo

  InternetGatewayLirioTech:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: InternetGatewayLirioTechTag
  
  AttachGatewayLirioTech:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPCLirioTech
      InternetGatewayId: !Ref InternetGatewayLirioTech

  #NatGatewayLirioTech:
  #  Type: AWS::EC2::NatGateway
  #  Properties:
  #    AllocationId: !GetAtt ElasticIPLirioTech.AllocationId
  #    SubnetId: !Ref SubnetPublicLirioTech
  #    Tags:
  #      - Key: Name
  #        Value: NatGatewayLirioTech

  #ElasticIPLirioTech:
  #  Type: "AWS::EC2::EIP"
  #  Properties:
  #    #InstanceId: !Ref MinhaEC2Demo
  #    Domain: vpc
  #    Tags:
  #      - Key: Name
  #        Value: ElasticIPLirioTech
Outputs:
  VPCExportLirioTech:
    Description: VPC Game ON Export
    Value: !Ref VPCLirioTech
    Export:
      Name: !Sub "${AWS::StackName}-VPCID"
  SecurityGroupExportLirioTech:
    Description: Export Security Group
    Value: !Ref SGLirioTech
    Export:
      Name: !Sub "${AWS::StackName}-SGID"
  SubnetPublicExportLirioTech:
    Description: Subnet Public Export SubNetPublica
    Value: !Ref SubnetPublicLirioTech
    Export:
      Name: !Sub "${AWS::StackName}-SubNetPublicaID"
  SubnetPublicExportLirioTech2:
    Description: Subnet Public Export SubNetPublica 2
    Value: !Ref SubnetPublicLirioTech2
    Export:
      Name: !Sub "${AWS::StackName}-SubNetPublicaID-2"      
  SubnetPrivateExportLirioTech:
    Description: VPC Export SubNetPrivate
    Value: !Ref SubnetPrivateLirioTech
    Export:
      Name: !Sub "${AWS::StackName}-SubNetPrivadaID"
